Fixed footer and changed icon on mobile devices

--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@ html, body, h1, h2, h3, h4, h5, h6, input, div, button, p, a, i, header, nav, fo
 	border:0;
 	font-family: roboto;
 }
-body, html {
-	min-height: 100vh;
+body{
+	min-height: calc(100vh - 6rem);
 	min-width: 180px;
+	padding-bottom: 6rem;
+	position: relative;
+	display: block
 }
 span {
 	max-width: 100%;
@@ -111,15 +114,13 @@ footer {
 	color:#fff;
 	font-size: 14px;
 	bottom: 0;
-	position: relative;
+	position: absolute;
 }
 .content {
 	width:80%;
 	margin-left: 10%;
 	margin-top: 60px;
 	text-align: left;
-	padding-bottom: 3vw;
-	min-height: calc(100vh - 753px)
 }
 .background {
 	width:100%;
@@ -198,16 +199,6 @@ h4 {
   min-height: 300px;
 }
 
-
-
-
-
-@media screen and (max-width: 580px) {
-	#header img {
-		width:auto;
-		height: 295px;
-	}
-}
 
 #pics {
 	background-color: #fff;
@@ -300,6 +291,16 @@ h4 {
 
 
 /* MEDIA QUARY */
+@media screen and (max-width: 580px) {
+	#header img {
+		width:auto;
+		height: 295px;
+	}
+}
+
+
+
+
 @media screen and (max-width: 960px){
   header {
     height:300px;
@@ -311,9 +312,6 @@ h4 {
   header a {
     line-height:300px;
   }
-  footer {
-    position:relative ! important;
-  }
   #program {
 	column-count: 1
   }
@@ -322,6 +320,8 @@ h4 {
 		margin-top: -16px;
   }
 }
+
+
 
 @media screen and (max-width: 700px) {
 	nav ul li a{
@@ -337,8 +337,10 @@ h4 {
 	}
 	header a img {
 		position: absolute;
-		margin-left: 29.4vw;
-		width:30vw;
+		width:15vw;
+		margin-top: -156px;
+		padding:100px 100px 20px 100px;
+		margin-left: -100px;
 	}
 	.content {
 		width: 90vw;
@@ -348,7 +350,6 @@ h4 {
 		width: 100%
 	}
 	footer {
-		position: absolute;
 		margin-top: 100px
 	}
 	.activeTab {
@@ -368,13 +369,14 @@ h4 {
 	}
 	header {
 		width:100%;
+		height: 200px;
 	}
 	header a.text {
 		display: none;
 	}
 	#header img{
-		width:200%;
-		height: auto;
+		width: auto;
+		height: 200px;
 		min-height: auto;
 		max-height: auto;
 	}
